[workspace]
resolver = "2"
members = [
    "fundraiser",
]

[workspace.package]
authors = ["Advanced programs"]
repository = "https://github.com/marcelofeitoza/advanced-programs"

[workspace.dependencies]
mollusk-svm = { path = "../mollusk/harness" } # { git = "https://github.com/deanmlittle/mollusk" }
mollusk-token = { path = "../mollusk/programs/token" } # { git = "https://github.com/deanmlittle/mollusk" }
bytemuck = "1.19.0"
five8_const = "0.1.3"
pinocchio = { git = "https://github.com/L0STE/pinocchio", branch = "spl-token" }
pinocchio-system = { git = "https://github.com/L0STE/pinocchio", branch = "spl-token" }
pinocchio-token = { git = "https://github.com/L0STE/pinocchio", branch = "spl-token" }
solana-nostd-sha256 = "0.1.3"
solana-program = "2.0.14"
solana-program-test = "2.0.14"
solana-sdk = "2.0.14"