[workspace]
resolver = "2"
members = ["fundraiser", "escrow"]
exclude = ["sbpf_close", "sbpf-testing"]

[workspace.package]
authors = ["Advanced programs"]
repository = "https://github.com/marcelofeitoza/advanced-programs"

[workspace.dependencies]
solana-nostd-sha256 = "0.1.3"
pinocchio = { git = "https://github.com/L0STE/pinocchio/", branch = "spl-token" }
pinocchio-system = { git = "https://github.com/L0STE/pinocchio/", branch = "spl-token" }
pinocchio-token = { git = "https://github.com/L0STE/pinocchio/", branch = "spl-token" }
five8_const = "0.1.3"
mollusk-svm = { git = "https://github.com/deanmlittle/mollusk" }
mollusk-token = { git = "https://github.com/deanmlittle/mollusk" }
solana-sdk = "2.0.8"
solana-program = "2.0.8"
spl-token = "6.0.0"