[package]
name = "escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = { workspace = true }
pinocchio-system = { workspace = true}
pinocchio-token = { workspace = true}
five8_const = { workspace = true }

[dev-dependencies]
mollusk-svm = { workspace = true }
mollusk-token = { workspace = true }
solana-sdk = { workspace = true }
spl-token = { workspace = true }

[features]
test-sbf = []
