[package]
name = "native-fundraiser"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-nostd-sha256 = "0.1.3"
pinocchio = { git = "https://github.com/L0STE/pinocchio/", branch = "spl-token" }
pinocchio-system = { git = "https://github.com/L0STE/pinocchio/", branch = "spl-token" }
pinocchio-token = { git = "https://github.com/L0STE/pinocchio/", branch = "spl-token" }
five8_const = "0.1.3"